# s3-synergy

./: .gitignore  AR-SYNERGY.txt  CMakeCache.ini  CMakeCache.linux  CMakeCache.macosx  CMakeCache.txt  CMakeLists.txt  README  README-AR-SYNERGY.md  README.markdown  README.md  TODO.txt  pom.xml
S3L2PP-util/: pom.xml
doc/: doxygen_config
files/: README  README.txt  S3__SY_2_SYCPAX_20120101T000000_20140101T000000_20120101T000000__BC__D_NT_AUX_00.nc  S3__SY_2_VPCPAX_20120101T000000_20140101T000000_20120101T000000__BC__D_NT_AUX_00.nc  S3__SY_2_VPRTAX_20120101T000000_20140101T000000_20120101T000000__BC__D_NT_AUX_00.nc  S3__SY_2_VPSRAX_20120101T000000_20140101T000000_20120101T000000__BC__D_NT_AUX_00.nc  S3__SY_2_VPSRAX_20120101T000000_20140101T000000_20120717T160000__BC__D_NT_AUX_01.nc  S3__SY_2_VSCPAX_20120101T000000_20140101T000000_20120101T000000__BC__D_NT_AUX_00.nc
jobs/: JobOrder.1.xml
s3-bootstrap/: pom.xml
s3-reader/: README.md  pom.xml
s3-reader/src/main/resources/: about.html  module.xml
s3-syn-util/: pom.xml
s3-synergy-util/: adf.properties  pom.xml
src/: CMakeCache.linux  CMakeLists.txt
src/main/c++/common/: Pixel.h  PixelClassification.cpp  PixelImpl.cpp  PixelImpl.h  Segment.h  SegmentImpl.cpp  SegmentImpl.h  Variable.h  VariableImpl.cpp  VariableImpl.h
src/main/c++/syn/: BasicTests.cpp  BasicTests.h  Configuration.cpp  Configuration.h  Pixel.h  PixelClassification.cpp  PixelClassification.h  PlayWithIO.h  XmlParser.cpp  XmlParser.h  syn.cpp
src/main/cdl/: S3__SY_2_SYCPAX.cdl  S3__SY_2_SYRTAX.cdl  S3__SY_2_VPRTAX.cdl  S3__SY_2_VPSRAX.cdl  S3__SY_2_VSCPAX.cdl  S3__SY_2_VSRTAX.cdl
src/main/config/: config.xml
src/main/cpp/common/: AbstractModule.h  Averaging.cpp  Averaging.h  ConfigParser.cpp  ConfigParser.h  Configuration.cpp  Configuration.h  JobOrder.cpp  JobOrder.h  JobOrderParser.cpp  JobOrderParser.h  Logger.cpp  Logger.h  MockReader.cpp  MockReader.h  Module.h  Pixel.h  PixelClassification.cpp  PixelClassification.h  PixelImpl.cpp  PixelImpl.h  Processor.cpp  Processor.h  ProcessorConfiguration.cpp  ProcessorConfiguration.h  ProcessorContext.cpp  ProcessorContext.h  Reader.cpp  Reader.h  Segment.h  SegmentImpl.cpp  SegmentImpl.h  StringUtils.cpp  StringUtils.h  SynL2Writer.cpp  SynL2Writer.h  TestModule.cpp  TestModule.h  Variable.h  VariableImpl.cpp  (+6 more)
src/main/cpp/core/: AbstractAccessor.h  AbstractModule.h  Accessor.h  Accessors.h  Array.cpp  Array.h  BasicModule.h  Boost.h  ByteAccessor.h  Config.h  Config.h.in  Configuration.cpp  Configuration.h  Constants.cpp  Constants.h  Context.cpp  Context.h  DefaultModule.h  Dictionary.cpp  Dictionary.h  DirectLocator.cpp  DirectLocator.h  DoubleAccessor.h  ErrorHandler.cpp  ErrorHandler.h  ExitCode.cpp  ExitCode.h  FloatAccessor.h  Grid.h  GridImpl.cpp  GridImpl.h  IPixel.h  Identifiable.h  IntAccessor.h  IpfConfiguration.cpp  IpfConfiguration.h  IpfProcessor.cpp  IpfProcessor.h  JobOrder.cpp  JobOrder.h  (+49 more)
src/main/cpp/logging/: DebugLogging.cpp  ErrorLogging.cpp  ErrorLogging.h  InfoLogging.cpp  InfoLogging.h  Logging.h  NullLogging.cpp  NullLogging.h  ProgressLogging.cpp  WarningLogging.cpp  WarningLogging.h
src/main/cpp/modules/: Aco.cpp  Aco.h  Aei.cpp  Aei.h  Aer.cpp  Aer.h  Ave.cpp  Ave.h  BasicModule.cpp  BasicModule.h  Col.cpp  Col.h  L1cReader.cpp  L1cReader.h  Pcl.cpp  Pcl.h  Reader.cpp  Reader.h  SynL2Writer.cpp  SynL2Writer.h  TestModule.cpp  TestModule.h  Vac.cpp  Vac.h  Vbm.cpp  Vbm.h  Vco.cpp  Vco.h  Vfl.cpp  Vfl.h  Vpr.cpp  Vpr.h
src/main/cpp/reader/: L1cReader.cpp  L1cReader.h  SynL1Reader.cpp  SynL1Reader.h
src/main/cpp/syl2/: syl2.cpp
src/main/cpp/syn/: ConfigParser.cpp  ConfigParser.h  Configuration.cpp  PlayWithIO.cpp  XmlParser.h  syn.cpp
src/main/cpp/tasks/: syl2.cpp  vgtp.cpp  vgts.cpp
src/main/cpp/util/: AbstractModule.h  AerPixel.h  AuxdataProvider.cpp  AuxdataProvider.h  BasicTask.cpp  BasicTask.h  ConfigurationAuxdataProvider.cpp  ConfigurationAuxdataProvider.h  DebugLogging.cpp  DebugLogging.h  DefaultLogging.cpp  DefaultLogging.h  Dictionary.cpp  Dictionary.h  DictionaryParser.cpp  DictionaryParser.h  ErrorHandler.cpp  ErrorHandler.h  ErrorLogging.cpp  ErrorLogging.h  ErrorMetric.cpp  ErrorMetric.h  IOUtils.h  InfoLogging.cpp  InfoLogging.h  JobOrder.cpp  JobOrderParser.cpp  JobOrderParser.h  Logger.cpp  Logger.h  LookupTable.h  LookupTableReader.cpp  LookupTableReader.h  Min.cpp  Min.h  MockReader.cpp  Module.h  ModuleException.h  MultiMin.cpp  MultiMin.h  (+42 more)
src/main/cpp/writer/: AbstractWriter.cpp  AbstractWriter.h  ManifestWriter.cpp  ManifestWriter.h  SegmentWriter.cpp  SegmentWriter.h  SynL2Writer.cpp  SynL2Writer.h  UniversalWriter.cpp  UniversalWriter.h  VgtPWriter.cpp  VgtPWriter.h  VgtSWriter.cpp  VgtSWriter.h  VgtWriter.cpp  VgtWriter.h
src/main/doxygen/: doxygen.properties
src/main/jobs/: JobOrder.0.xml
src/main/resources/SAFE_metacomponents/: a550.ncml  amin.ncml  flags.ncml  geolocation.ncml  manifest_SYN.template  manifest_SYN.xml  r0400.ncml  r0413.ncml  r0510.ncml  r0550n.ncml  r0560.ncml  r0620.ncml  r0665n.ncml  r0665o.ncml  r0674.ncml  r0681.ncml  r0709.ncml  r0754.ncml  r0761.ncml  r0779.ncml  r0865.ncml  r0865n.ncml  r0865o.ncml  r0885.ncml  r0900.ncml  r1020.ncml  r1375n.ncml  r1610n.ncml  r1610o.ncml  r2250n.ncml  r2250o.ncml  t550.ncml  tiepoints_meteo.ncml  tiepoints_olci.ncml  tiepoints_slstr_n.ncml  tiepoints_slstr_o.ncml  time.ncml
src/main/resources/output_variable_definitions/: L2_SYN_SLSTR_oblique_sub-sampled_annotations.xml  L2_SYN_status_flags.xml  (+46 more)
src/main/sh/: create_auxdata_files.sh  create_documentation.sh  create_dummy_input.sh  environment.sh
src/test/cpp/: SyIntSyl2_2_Runner.cpp  SyIntVgtP_1_Runner.cpp  SyIntVgtP_2_Runner.cpp  SyIntVgtS_1_Runner.cpp  SyIntVgtS_2_Runner.cpp  SyUntAcoRunner.cpp  SyUntAeiRunner.cpp  SyUntAerRunner.cpp  SyUntAveRunner.cpp  SyUntColRunner.cpp  SyUntGenRunner.cpp  SyUntPclRunner.cpp  SyUntSreRunner.cpp  SyUntSwrRunner.cpp  SyUntVbmRunner.cpp  SyUntVcoRunner.cpp  SyUntVflRunner.cpp  SyUntVprRunner.cpp  SyUntVpwRunner.cpp
testdata/SY1/: README  README.txt
tmp/: README.txt
(+1096 files in other folders)
